--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,17 @@ pom.xml.asc
 .lein-plugins/
 .lein-failures
 .nrepl-port
+
+# Intellij, Maven
+.idea/
+/out/
+*.iml
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
