--- a/server/pom.xml
+++ b/server/pom.xml
@@ -45,10 +45,10 @@
 		</dependency>
 
 		<!-- Spring Starter Data JPA -->
-		<!--<dependency>-->
-			<!--<groupId>org.springframework.boot</groupId>-->
-			<!--<artifactId>spring-boot-starter-data-jpa</artifactId>-->
-		<!--</dependency>-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 
 		<!-- Spring Starter Security -->
 		<!--<dependency>-->
@@ -57,11 +57,11 @@
 		<!--</dependency>-->
 
 		<!-- Inject -->
-		<!--<dependency>-->
-			<!--<groupId>javax.inject</groupId>-->
-			<!--<artifactId>javax.inject</artifactId>-->
-			<!--<version>1</version>-->
-		<!--</dependency>-->
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<version>1</version>
+		</dependency>
 
 		<!-- Spring Starter Actuator -->
 		<!--<dependency>-->
@@ -90,12 +90,13 @@
 		</dependency>
 
 		<!-- Postgres -->
-		<!--<dependency>-->
-			<!--<groupId>org.postgresql</groupId>-->
-			<!--<artifactId>postgresql</artifactId>-->
-			<!--<version>9.4-1206-jdbc42</version>-->
-		<!--</dependency>-->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.4-1206-jdbc42</version>
+		</dependency>
 
+		<!-- In memory db, no config needed, just uncomment to use -->
 		<!--<dependency>-->
 			<!--<groupId>org.hsqldb</groupId>-->
 			<!--<artifactId>hsqldb</artifactId>-->
