--- a/server/pom.xml
+++ b/server/pom.xml
@@ -52,14 +52,23 @@
 
 		<!-- Spring Starter Security -->
 		<dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-security</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+		<!-- Spring Starter Solr -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-solr</artifactId>
 		</dependency>
+
+		<!-- Spring Redis -->
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-data-redis</artifactId>
+			<version>1.0.1.RELEASE</version>
+		</dependency>
+
 
 		<!-- Inject -->
 		<dependency>
@@ -81,10 +90,17 @@
 		<!--</dependency>-->
 
 		<!-- SendGrid -->
+		<!--<dependency>-->
+			<!--<groupId>com.sendgrid</groupId>-->
+			<!--<artifactId>sendgrid-java</artifactId>-->
+			<!--<version>2.2.2</version>-->
+		<!--</dependency>-->
+
+
 		<dependency>
-			<groupId>com.sendgrid</groupId>
-			<artifactId>sendgrid-java</artifactId>
-			<version>2.2.2</version>
+			<groupId>com.github.kstyrc</groupId>
+			<artifactId>embedded-redis</artifactId>
+			<version>0.6</version>
 		</dependency>
 
 		<!-- Spring Starter Test -->
